--- a/permit/admin/admin_report/admin_report1.css
+++ b/permit/admin/admin_report/admin_report1.css
@@ -13,23 +13,26 @@ body{
 .mainbar{
     background-color: #7864F3;
     height: 60px;
-    margin-bottom: 0;
+    width: 100%;
+    display: flex;
+    position: fixed;
+    float: left;
 }
 
 .a-sidebar {
-    height: 97%;
+    height: 100%;
     width: 205px;
     position: fixed;
     z-index: 1;
-    top: 30;
+    top: 60px;
     left: 0;
     background-color: #3C3473;
     overflow-x: hidden;
     padding-top: 0px;
 }
-  
+
 .a-logo{
-    background-image: url('../../image/logo.png');
+    background-image: url('../../../image/logo.png');
     background-repeat: no-repeat;
     background-size: cover;
     margin-top: 3px;
@@ -38,11 +41,24 @@ body{
     height: 50px;
 }
 
+nav{
+    position: fixed;
+    width: 100%;
+    top: 10px;
+    float: right;
+    margin-right: 25px;
+}
+
+nav li{
+    margin-right: 25px;
+    list-style: none;
+}
+
 .logout{
     font-family: 'Stylish';
     width:140px;
-    margin-top: 10px;
-    margin-right: 25px;
+    margin-top: 0px;
+    margin-right: 0px;
     float: right;
     height:40px;
     border-color: black;
@@ -107,6 +123,7 @@ d{
     min-width: 175px;
     bottom: 3px;
     padding-top: 4px;
+    padding-left: 6px;
     color: white;
 }
 
@@ -114,6 +131,7 @@ d{
     border:none;
     background-color: white;
     min-width: 175px;
+    padding-left: 6px;
     bottom: 3px;
     padding-top: 4px;
 }
@@ -129,7 +147,8 @@ d{
 .a-main {
     margin-left: 225px;
     margin-right: 25px;
-    padding: 20px 7px 0 10px;
+    overflow: auto;
+    padding: 75px 7px 0 10px;
 }
 
 .java{
