--- a/permit/admin/admin_rol/admin_rol_editrequest.css
+++ b/permit/admin/admin_rol/admin_rol_editrequest.css
@@ -18,23 +18,26 @@ body{
 .mainbar{
     background-color: #7864F3;
     height: 60px;
-    margin-bottom: 0;
+    width: 100%;
+    display: flex;
+    position: fixed;
+    float: left;
 }
 
 .a-sidebar {
-    height: 97%;
+    height: 100%;
     width: 205px;
     position: fixed;
     z-index: 1;
-    top: 30;
+    top: 60px;
     left: 0;
     background-color: #3C3473;
     overflow-x: hidden;
     padding-top: 0px;
 }
-  
+
 .a-logo{
-    background-image: url('../../image/logo.png');
+    background-image: url('../../../image/logo.png');
     background-repeat: no-repeat;
     background-size: cover;
     margin-top: 3px;
@@ -43,10 +46,24 @@ body{
     height: 50px;
 }
 
-.logout{
-    width:140px;
-    margin-top: 10px;
+nav{
+    position: fixed;
+    width: 100%;
+    top: 10px;
+    float: right;
     margin-right: 25px;
+}
+
+nav li{
+    margin-right: 25px;
+    list-style: none;
+}
+
+.logout{
+    font-family: 'Stylish';
+    width:140px;
+    margin-top: 0px;
+    margin-right: 0px;
     float: right;
     height:40px;
     border-color: black;
@@ -64,6 +81,7 @@ body{
 
 c{
     width: 205px;
+    font-family: 'Stylish';
     text-decoration: none;
     padding: 30px 0px 20px 0px;
     text-align: center;
@@ -73,6 +91,7 @@ c{
 }
 
 d{
+    font-family: 'Stylish';
     text-decoration: none;
     font-size: 50px;
     color: black;
@@ -88,7 +107,9 @@ d{
     left: 57.8em;
 }
 
+
 .a-sidebar a {
+    font-family: 'Stylish';
     padding: 6px 8px 6px 14px;
     text-decoration: none;
     text-align: left;
@@ -108,16 +129,13 @@ d{
 
 }
 
-.top{
-    margin-top: 0px;
-}
-
 .a-menu{
     border:none;
     background-color: #7864F3;
     min-width: 175px;
     bottom: 3px;
     padding-top: 4px;
+    padding-left: 6px;
     color: white;
 }
 
@@ -125,6 +143,7 @@ d{
     border:none;
     background-color: white;
     min-width: 175px;
+    padding-left: 6px;
     bottom: 3px;
     padding-top: 4px;
 }
@@ -140,7 +159,8 @@ d{
 .a-main {
     margin-left: 225px;
     margin-right: 25px;
-    padding: 20px 7px 0 10px;
+    overflow: auto;
+    padding: 75px 7px 0 10px;
 }
 
 @media screen and (max-height: 450px) {
