--- a/permit/user/user_profile/user_profile2.css
+++ b/permit/user/user_profile/user_profile2.css
@@ -1,3 +1,4 @@
+/*Dikerjakan oleh 2031013 Jocelyn*/
 @import url('https://fonts.googleapis.com/css2?family=Stylish&display=swap');
 
 html {
@@ -10,24 +11,32 @@ body{
     background-repeat: no-repeat;
 }
 
+*{
+    font-family:'Stylish';
+    font-size:20px;;
+}
+
 .mainbar{
     background-color: #7864F3;
     height: 60px;
-    margin-bottom: 0;
+    width: 100%;
+    display: flex;
+    position: fixed;
+    float: left;
 }
 
 .a-sidebar {
-    height: 97%;
+    height: 100%;
     width: 205px;
     position: fixed;
     z-index: 1;
-    top: 30;
+    top: 60px;
     left: 0;
     background-color: #3C3473;
     overflow-x: hidden;
     padding-top: 0px;
-}   
-  
+}
+
 .a-logo{
     background-image: url('../../image/logo.png');
     background-repeat: no-repeat;
@@ -38,11 +47,24 @@ body{
     height: 50px;
 }
 
+nav{
+    position: fixed;
+    width: 100%;
+    top: 10px;
+    float: right;
+    margin-right: 25px;
+}
+
+nav li{
+    margin-right: 25px;
+    list-style: none;
+}
+
 .logout{
     font-family: 'Stylish';
     width:140px;
-    margin-top: 10px;
-    margin-right: 25px;
+    margin-top: 0px;
+    margin-right: 0px;
     float: right;
     height:40px;
     border-color: black;
@@ -97,12 +119,17 @@ d{
 
 }
 
+.search-bar{
+    margin-top: 30px;
+}
+
 .a-menu{
     border:none;
     background-color: #7864F3;
     min-width: 175px;
     bottom: 3px;
     padding-top: 4px;
+    padding-left: 6px;
     color: white;
 }
 
@@ -110,6 +137,7 @@ d{
     border:none;
     background-color: white;
     min-width: 175px;
+    padding-left: 6px;
     bottom: 3px;
     padding-top: 4px;
 }
@@ -125,7 +153,8 @@ d{
 .a-main {
     margin-left: 225px;
     margin-right: 25px;
-    padding: 20px 7px 0 10px;
+    overflow: auto;
+    padding: 75px 7px 0 10px;
 }
 
 body{
