--- a/permit/admin/admin_report/admin_report1.css
+++ b/permit/admin/admin_report/admin_report1.css
@@ -32,7 +32,7 @@ body{
 }
 
 .a-logo{
-    background-image: url('../../../image/logo.png');
+    background-image: url('../../image/logo.png');
     background-repeat: no-repeat;
     background-size: cover;
     margin-top: 3px;
