--- a/permit/admin/master_data/department/department_action.css
+++ b/permit/admin/master_data/department/department_action.css
@@ -163,7 +163,7 @@ input::-webkit-inner-spin-button {
 input{
     padding-left: 10px;
     padding-right: 10px;
-    width: 450px;
+    width: 85%;
     height:35.5px;
     background-color:white;
     font-family: 'Stylish';
